# ShellSync

./: .todo  README.md  requirements.txt
backend/: Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/control_app/: agent.py  apps.py  auth.py  discovery.py  urls.py  views.py
config/: settings.py  urls.py
control_app/: agent.py  urls.py  views.py
