[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eric Alfred <alfrederic371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.1"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
